--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 </header>
 
 <nav>
-    <a href="home.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="menu.html">Menu</a>
     <a href="timing.html">Timings</a>
     <a href="cont.html">Contact</a>
@@ -126,3 +126,4 @@
 
 </body>
 </html>
+
